--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,18 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "sensio/framework-extra-bundle": "^5.6",
+        "symfony/apache-pack": "^1.0",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/monolog-bundle": "^3.6",
+        "symfony/webpack-encore-bundle": "^1.8",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.23"
     },
     "config": {
         "optimize-autoloader": true,
