--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,7 @@
 hello:
   path: /hello
   controller: App\Controller\HelloController::hello
+
+#tom:
+#  path: /tom
+#  controller: App\Controller\HelloController::tom
