--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,14 @@
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
         "symfony/monolog-bundle": "^3.6",
+        "symfony/twig-bundle": "5.1.*",
         "symfony/webpack-encore-bundle": "^1.8",
-        "symfony/yaml": "5.1.*"
+        "symfony/yaml": "5.1.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.23"
