--- a/config/services.yaml
+++ b/config/services.yaml
@@ -29,3 +29,12 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    app.menu_builder:
+        class: App\Menu\MenuBuilder
+        public: true
+#        arguments: ["@knp_menu.factory"]
+        arguments: ["@knp_menu.factory", '@request_stack']
+        tags:
+          - { name: knp_menu.menu_builder, method: createMainMenu, alias: mainMenu }
+#          - { name: knp_menu.menu_builder, method: createLoginMenu, alias: loginMenu }
