--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,17 @@
         "knplabs/knp-menu-bundle": "^3.1",
         "sensio/framework-extra-bundle": "^5.6",
         "symfony/apache-pack": "^1.0",
+        "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/http-foundation": "5.1.*",
         "symfony/monolog-bundle": "^3.6",
         "symfony/twig-bundle": "5.1.*",
-        "symfony/webpack-encore-bundle": "^1.8",
+        "symfony/validator": "5.1.*",
+        "symfony/webpack-encore-bundle": "^1.9",
         "symfony/yaml": "5.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
